aspnetcore/performance/response-compression/samples/1.x/README.md
---
ms.openlocfilehash: 4add1c40387073f35711b2c8db27e48657a18192
ms.sourcegitcommit: 24b1f6decbb17bb22a45166e5fdb0845c65af498
ms.translationtype: MT
ms.contentlocale: tr-TR
ms.lasthandoff: 03/01/2019
ms.locfileid: "57077151"
---
# <a name="response-compression-sample-application-aspnet-core-1x"></a><span data-ttu-id="5c92b-101">Yanıt sıkıştırma örnek uygulaması (ASP.NET Core 1.x)</span><span class="sxs-lookup"><span data-stu-id="5c92b-101">Response compression sample application (ASP.NET Core 1.x)</span></span>

<span data-ttu-id="5c92b-102">Bu örnek kullanımını ASP.NET Core 1.x yanıt sıkıştırma ara yazılımı için HTTP yanıtları sıkıştırma.</span><span class="sxs-lookup"><span data-stu-id="5c92b-102">This sample illustrates the use of ASP.NET Core 1.x Response Compression Middleware to compress HTTP responses for.</span></span> <span data-ttu-id="5c92b-103">Örnek GZIP ve metin ve resim yanıtları için özel sıkıştırmasını sağlayıcıları gösterir ve sıkıştırma için MIME türü ekleme işlemi gösterilmektedir.</span><span class="sxs-lookup"><span data-stu-id="5c92b-103">The sample demonstrates Gzip and custom compression providers for text and image responses and shows how to add a MIME type for compression.</span></span> <span data-ttu-id="5c92b-104">ASP.NET Core 2.x örnek için bkz: [yanıt sıkıştırma örnek uygulaması (ASP.NET Core 2.x)](https://github.com/aspnet/Docs/tree/master/aspnetcore/performance/response-compression/samples/2.x).</span><span class="sxs-lookup"><span data-stu-id="5c92b-104">For the ASP.NET Core 2.x sample, see [Response compression sample application (ASP.NET Core 2.x)](https://github.com/aspnet/Docs/tree/master/aspnetcore/performance/response-compression/samples/2.x).</span></span>

## <a name="examples-in-this-sample"></a><span data-ttu-id="5c92b-105">Bu örnekte örnekleri</span><span class="sxs-lookup"><span data-stu-id="5c92b-105">Examples in this sample</span></span>

* `GzipCompressionProvider`
  * `text/plain`
    * <span data-ttu-id="5c92b-106">**/** -Lorem Ipsum metin dosyası yanıt 927 bayt için sıkışır 2,044 bayt</span><span class="sxs-lookup"><span data-stu-id="5c92b-106">**/** - Lorem Ipsum text file response at 2,044 bytes that will compress to 927 bytes</span></span>
    * <span data-ttu-id="5c92b-107">**/testfile1kb.txt** -47 bayt için sıkışır 1.033 bayt metin dosyası yanıt</span><span class="sxs-lookup"><span data-stu-id="5c92b-107">**/testfile1kb.txt** - Text file response at 1,033 bytes that will compress to 47 bytes</span></span>
    * <span data-ttu-id="5c92b-108">**/ trickle** -1 saniyelik aralıklarla tek karakter olarak verilen yanıt</span><span class="sxs-lookup"><span data-stu-id="5c92b-108">**/trickle** - Response issued as single characters at 1 second intervals</span></span>
  * `image/svg+xml`
    * <span data-ttu-id="5c92b-109">**/Banner.SVG** -A ölçeklenebilir vektör grafiği (SVG) görüntü yanıt 4,459 bayt için sıkışır 9,707 bayt</span><span class="sxs-lookup"><span data-stu-id="5c92b-109">**/banner.svg** - A Scalable Vector Graphics (SVG) image response at 9,707 bytes that will compress to 4,459 bytes</span></span>
* `CustomCompressionProvider`<br><span data-ttu-id="5c92b-110">Ara yazılım ile kullanmak için özel sıkıştırma sağlayıcıyı uygulama işlemini gösterir</span><span class="sxs-lookup"><span data-stu-id="5c92b-110">Shows how to implement a custom compression provider for use with the middleware</span></span>

<span data-ttu-id="5c92b-111">İstek zaman içerir `Accept-Encoding` örnek üstbilgisini ekler bir `Vary: Accept-Encoding` yanıt üst bilgisi.</span><span class="sxs-lookup"><span data-stu-id="5c92b-111">When the request includes the `Accept-Encoding` header, the sample adds a `Vary: Accept-Encoding` header to the response.</span></span> <span data-ttu-id="5c92b-112">`Vary` Üstbilgi bildirir alternatif değerlerine dayalı yanıt birden çok kopyasını korumak için önbellekleri `Accept-Encoding`, aşağıdakilerden birini yapabilirsiniz sistemlerine sıkıştırılmış kabul etmek için bir sıkıştırılmış (gzip) ve sıkıştırılmamış önbelleklerinde depolanan veya sıkıştırılmamış yanıtı.</span><span class="sxs-lookup"><span data-stu-id="5c92b-112">The `Vary` header instructs caches to maintain multiple copies of the response based on alternative values of `Accept-Encoding`, so both a compressed (gzip) and uncompressed version are stored in caches for systems that can either accept the compressed or the uncompressed response.</span></span>

## <a name="using-the-sample"></a><span data-ttu-id="5c92b-113">Örnek kullanma</span><span class="sxs-lookup"><span data-stu-id="5c92b-113">Using the sample</span></span>

1. <span data-ttu-id="5c92b-114">Bir istek kullanarak olun [Fiddler](http://www.telerik.com/fiddler), [Firebug](http://getfirebug.com/), veya [Postman](https://www.getpostman.com/) olmadan uygulamasına bir `Accept-Encoding` üstbilgi ve Not yanıt yükünde yanıt boyutu ve yanıt üstbilgileri.</span><span class="sxs-lookup"><span data-stu-id="5c92b-114">Make a request using [Fiddler](http://www.telerik.com/fiddler), [Firebug](http://getfirebug.com/), or [Postman](https://www.getpostman.com/) to the application without an `Accept-Encoding` header and note the response payload, response size, and response headers.</span></span>
1. <span data-ttu-id="5c92b-115">Ekleme bir `Accept-Encoding: gzip` üstbilgisi ve sıkıştırılmış yanıt boyutu ve yanıt üst bilgilerini not edin.</span><span class="sxs-lookup"><span data-stu-id="5c92b-115">Add an `Accept-Encoding: gzip` header and note the compressed response size and response headers.</span></span> <span data-ttu-id="5c92b-116">Bırakma yanıt boyutu bakın ve `Content-Encoding: gzip` yanıt üst bilgisi, örnek uygulama tarafından eklenir.</span><span class="sxs-lookup"><span data-stu-id="5c92b-116">You see the response size drop, and the `Content-Encoding: gzip` response header is included by the sample app.</span></span> <span data-ttu-id="5c92b-117">Yanıt gövdesi için Lorem Ipsum baktığınızda veya **testfile1kb.txt** yanıt, gördüğünüz sıkıştırılmış ve okunamaz metindir.</span><span class="sxs-lookup"><span data-stu-id="5c92b-117">When you look at the response body for the Lorem Ipsum or **testfile1kb.txt** response, you see that the text is compressed and unreadable.</span></span>
1. <span data-ttu-id="5c92b-118">Ekleme bir `Accept-Encoding: mycustomcompression` üstbilgi ve yanıt üst bilgilerini not edin.</span><span class="sxs-lookup"><span data-stu-id="5c92b-118">Add an `Accept-Encoding: mycustomcompression` header and note the response headers.</span></span> <span data-ttu-id="5c92b-119">`CustomCompressionProvider` Gerçekten yanıt sıkıştırma olmayan boş bir uygulama olduğu halde için özel sıkıştırma stream sarmalayıcı oluşturabilirsiniz `CreateStream()` yöntemi.</span><span class="sxs-lookup"><span data-stu-id="5c92b-119">The `CustomCompressionProvider` is an empty implementation that doesn't actually compress the response, but you can create a custom compression stream wrapper for the `CreateStream()` method.</span></span>
